--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # File: .github/workflows/repo-sync.yml
-name: sync-zhizhi945-scripts
+name: sync-LXK9301-scripts
 on:
   schedule:
     - cron: '1 0,15 * * *'
@@ -9,11 +9,12 @@ on:
   push:
     branches: [ master ]
   repository_dispatch:
-    types: sync-zhizhi945-scripts
+    types: sync-LXK9301-scripts
 jobs:
   repo-sync:
     env:
       PAT: ${{ secrets.PAT }} #此处PAT需要申请，教程详见：https://www.jianshu.com/p/bb82b3ad1d11
+      dst_key: ${{ secrets.GITEE_PRIVATE_KEY }} # 我自己同步到gitee使用，其他人可忽略
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
@@ -21,11 +22,21 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: sync zhizhi945-scripts
+      - name: sync LXK9301-scripts
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/zhizhi945/jd_scripts.git"
+          source_repo: "https://github.com/LXK9301/jd_scripts.git"
           source_branch: "master"
           destination_branch: "master"
           github_token: ${{ secrets.PAT }}
+      # 我自己同步到gitee使用，其他人可忽略
+      - name: sync github -> gitee
+        uses: Yikun/hub-mirror-action@master
+        if: env.dst_key
+        with:
+          src: github/LXK9301
+          dst: gitee/lxk0301
+          static_list: "jd_scripts"
+          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
